kubernetes/app/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: application
spec:
  selector:
    matchLabels:
      app: application
  template:
    metadata:
      labels:
        app: application
    spec:
      containers:
        - name: application
          image: ragatzino/backend-demo-conception-logicielle:latest # Lien de l'image que vous avez construit pour votre brique applicative
          resources:
            limits:
              memory: "200Mi"
              cpu: "300m"
          # Permet de charger les variables d'environnement dans votre application via le remplissage d'une ressources "cle" "valeur" kubernetes, le configmap.
          ports:
            - containerPort: 8000 # Port du serveur lancé, voir votre image docker
